--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GOOGLE_ID=
 GOOGLE_SECRET=
 
-DATABASE_URL="mongodb+srv://admin:admin@cluster0.vpfvx1l.mongodb.net/freello?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL=
